add header & first two sections

--- a/index.html
+++ b/index.html
@@ -1,8 +1,42 @@
 <!DOCTYPE html>
-<html>
-   <head>
-   </head>
-   <body>
-      <!-- Write your HTML in this file! -->
-   </body>
+<html lang="en">
+<head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Iris's Japan Wishlist</title>
+</head>
+<header>
+   <h1>Iris's Japan Wishlist</h1>
+   <h2>Contents:</h2>
+   <li><a href="#about-me">About Me</a></li>
+   <li><a href="why-japan">Why Japan</a></li>
+   <li><a href="">Cute Stuff</a></li>
+   <li><a href="">Theme Parks</a></li>
+   <li><a href="">Food!</a></li>
+   <li><a href="url">Credits</a></li>
+</header>
+<body>
+   
+   <h2 id="about-me">About Me</h2>
+   <p>
+      Hello! I am an 8 year old girl that loves everything Japan.
+      I love watching anime and Japanese youtubers, reading and drawing manga, eating Japanese food, 
+      and going to Japanese festivals - my favorite was the Cherry Blossom Festival!
+   </p>   
+   <img src="/js-assignment-4-html-me-something-jenna215/images/cherry-blossom-festival.jpeg" alt="cherry blossoms" style="width:50vw">
+
+   <h2 id="why-japan">Why Japan?</h2>
+   <p>
+      I was supposed to go to Japan with my family in 2020, but that trip had to be cancelled...
+      Now I am really hoping my family can reschedule our trip to Japan!
+      After seeing so many fun and cute things from Japan in videos, I really want to explore with my family!
+      I learned some Japanese from watching videos, it would be fun to talk to people in Japan!
+      I also found a lot of amazing places. Here is my list of places I want to visit!
+   </p>
+   <img src="/js-assignment-4-html-me-something-jenna215/images/pokemon-plane.jpg" alt="pokemon plane" style="width:50vw">
+
+
+
+
+</body>
 </html>
