--- a/index.html
+++ b/index.html
@@ -9,14 +9,16 @@
    <h1>Iris's Japan Wishlist</h1>
    <h2>Contents:</h2>
    <li><a href="#about-me">About Me</a></li>
-   <li><a href="why-japan">Why Japan</a></li>
-   <li><a href="">Cute Stuff</a></li>
-   <li><a href="">Theme Parks</a></li>
-   <li><a href="">Food!</a></li>
-   <li><a href="url">Credits</a></li>
+   <li><a href="#why-japan">Why Japan</a></li>
+   <li><a href="#cute-places">Cute Places</a></li>
+   <li><a href="#theme-parks">Theme Parks</a></li>
+   <li><a href="#food">Food!</a></li>
+   <li><a href="#credits">Credits</a></li>
 </header>
+
 <body>
-   
+<main>
+<div>
    <h2 id="about-me">About Me</h2>
    <p>
       Hello! I am an 8 year old girl that loves everything Japan.
@@ -24,19 +26,59 @@
       and going to Japanese festivals - my favorite was the Cherry Blossom Festival!
    </p>   
    <img src="/js-assignment-4-html-me-something-jenna215/images/cherry-blossom-festival.jpeg" alt="cherry blossoms" style="width:50vw">
+</div>
 
+<div>
    <h2 id="why-japan">Why Japan?</h2>
    <p>
       I was supposed to go to Japan with my family in 2020, but that trip had to be cancelled...
-      Now I am really hoping my family can reschedule our trip to Japan!
-      After seeing so many fun and cute things from Japan in videos, I really want to explore with my family!
-      I learned some Japanese from watching videos, it would be fun to talk to people in Japan!
-      I also found a lot of amazing places. Here is my list of places I want to visit!
+      Now I am really hoping my family can reschedule our trip to Japan.
+      After seeing so many fun and cute things about Japan in videos, I really want to explore with my family!
+      I also found a lot of amazing places. Here is my list of places I want to visit.
    </p>
    <img src="/js-assignment-4-html-me-something-jenna215/images/pokemon-plane.jpg" alt="pokemon plane" style="width:50vw">
+</div>
 
+<article>
+   <h2 id="cute-places">Cute Places</h2>
+   <p>
+      What I love the most about Japan is that they have so many cute things!
+   </p>
+   <ul><a href="https://sailormoon-museum.com/en/">Sailor Moon Museum</a></ul>
+   <a href="https://sailormoon-museum.com/en/"><img src="/js-assignment-4-html-me-something-jenna215/images/sailormoon-museum.jpg" alt="sailor moon museum" style="width:50vw"></a>
+   <ul><a href="https://ghibli-park.jp/en/">Ghibli Park</a></ul>
+   <a href="https://ghibli-park.jp/en/"><img src="/js-assignment-4-html-me-something-jenna215/images/ghibli-park.jpg" alt="ghibli park" style="width:50vw"></a>
+</article>
 
+<article>
+   <h2 id="theme-parks">Theme Parks</h2>
+   <p>
+      There are so many fun theme parks to try in Japan!
+   </p>
+   <ul><a href="https://www.puroland.jp/lang/en/">Sanrio Puroland</a></ul>
+   <a href="https://www.puroland.jp/lang/en/"><img src="/js-assignment-4-html-me-something-jenna215/images/puroland.jpg" alt="sanrio puroland" style="width:50vw"></a>
+   <ul><a href="https://www.tokyodisneyresort.jp/en/tds/">Tokyo Disneyland and Disney Sea</a></ul>
+   <a href="https://www.tokyodisneyresort.jp/en/tds/"><img src="/js-assignment-4-html-me-something-jenna215/images/Tokyo-Disney-Resort.jpg" alt="tokyo disneyland and disney sea" style="width:50vw"></a>
+</article>
 
+<article>
+   <h2 id="food">Food!</h2>
+   <p>
+      I want to eat all of the cute, sweet treats!
+   </p>
+   <ul><a href="https://kirbycafe.jp/tokyo/">Kirby Cafe</a></ul>
+   <a href="https://kirbycafe.jp/tokyo/"><img src="/js-assignment-4-html-me-something-jenna215/images/kirby-cafe.jpg" alt="kirby cafe" style="width:50vw"></a>
+   <ul><a href="https://www.pokemoncenter-online.com/cafe/en/">Poke&#769;mon Center & Cafe</a></ul>
+   <a href="https://www.pokemoncenter-online.com/cafe/en/"><img src="/js-assignment-4-html-me-something-jenna215/images/pokemon-store-cafe.jpg" alt="pokemon store cafe" style="width:50vw"></a>
+</article>
+</main>
+
+<footer>
+   <h2 id="credits">Credits</h2>
+   <p>
+      This page was made in collaboration between Iris and the person who knows her best &hearts;
+   </p>
+</footer>
 
 </body>
 </html>
