--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Iris's Japan Wishlist</title>
+   <link rel="stylesheet" href="styles.css">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans&display=swap" rel="stylesheet">
 </head>
-<header>
-   <h1>Iris's Japan Wishlist</h1>
+
+<header id="mainHeading">
+   <h1>Japan Wishlist</h1>
    <h2>Contents:</h2>
    <li><a href="#about-me">About Me</a></li>
    <li><a href="#why-japan">Why Japan</a></li>
@@ -21,7 +27,7 @@
 <div>
    <h2 id="about-me">About Me</h2>
    <p>
-      Hello! I am an 8 year old girl that loves everything Japan.
+      Hello! I am Iris, an 8 year old girl that loves everything Japan.
       I love watching anime and Japanese youtubers, reading and drawing manga, eating Japanese food, 
       and going to Japanese festivals - my favorite was the Cherry Blossom Festival!
    </p>   
@@ -71,9 +77,12 @@
    <ul><a href="https://www.pokemoncenter-online.com/cafe/en/">Poke&#769;mon Center & Cafe</a></ul>
    <a href="https://www.pokemoncenter-online.com/cafe/en/"><img src="/js-assignment-4-html-me-something-jenna215/images/pokemon-store-cafe.jpg" alt="pokemon store cafe" style="width:50vw"></a>
 </article>
+
+<p id="testP" class="funParagraph">Thank you for reading!</p>
+
 </main>
 
-<footer>
+<footer class="footer">
    <h2 id="credits">Credits</h2>
    <p>
       This page was made in collaboration between Iris and the person who knows her best &hearts;
