--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Iris's Japan Wishlist</title>
    <link rel="stylesheet" href="styles.css">
-   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Lato&family=Open+Sans&display=swap" rel="stylesheet"> -->
 </head>
 
 <body>
@@ -22,7 +22,7 @@
       <li><a href="#food">Food!</a></li>
       <li><a href="#credits">Credits</a></li>
    </header>
-   
+
 <main>
 <div>
    <h2 id="about-me">About Me</h2>
